--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,13 +23,9 @@ body.hide-sidebar {
 header.header {
     grid-area: header;
     display: flex;
-    background-color: #1976d2;
+    background-color: rgb(2, 168, 168);
     align-items: center;
     z-index: 10;
-    box-shadow: 
-        0 2px 4px -1px rgba(0, 0, 0, .2),
-        0 4px 4px 0px rgba(0, 0, 0, .14),
-        0 1px 10px 0px rgba(0, 0, 0, .12);
 }
 
 header.header .logo {
@@ -70,7 +66,7 @@ header.header .dropdown-content {
     display: none;
     position: absolute;
     min-width: 100%;
-    background-color: #f9f9f9;
+    background-color: #3b3b3b;
     padding: 15px 0px;
     z-index: 100;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, .2);
@@ -90,7 +86,7 @@ header.header .dropdown-content a {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #222;
+    color: #DDD;
     padding: 7px;
     font-size: 1.1rem;
 }
@@ -115,7 +111,7 @@ aside.sidebar {
     align-items: center;
     grid-area: sidebar;
     box-shadow: -5px 0px 25px 1px rgba(0, 0, 0, 0.4);
-    background-color: #FFF;
+    background-color: #3b3b3b;
 }
 
 aside.sidebar .menu {
@@ -141,7 +137,7 @@ aside.sidebar .menu li.nav-item:hover {
 
 aside.sidebar .menu li.nav-item a {
     font-size: 1.2rem;
-    color: #555;
+    color: #DDD;
     text-decoration: none;
 }
 
@@ -149,11 +145,49 @@ body.hide-sidebar aside.sidebar{
     display: none;
 }
 
+aside.sidebar .sidebar-widgets{
+    position: sticky;
+    bottom: 10px;
+}
+
+aside.sidebar .sidebar-widget{
+    display: flex;
+    align-items: center;
+}
+
+aside.sidebar .sidebar-widget .icon{
+    font-size: 3.5rem;
+    margin: 2px 10px 2px 0px;
+
+}
+
+aside.sidebar .sidebar-widget .info{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex: 1;
+}
+
+.division{
+    widows: 80%;
+    border: solid 1px #424242;
+}
+
+aside.sidebar .info .main{
+    font-size: 2rem;
+}
+
 main.content{
     grid-area: content;
 }
 
-
 footer.footer{
+    display: flex;
+    font-size: 0.8em;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 20px;
+    background-color: teal;
+    color: #DDD;
     grid-area: footer;
 }
