--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Helvetica', Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
     display: grid;
     grid-template-columns: 250px 1fr;
     grid-template-rows: 64px 1fr 64px;
